
	* ext/socket/ancdata.c (ancillary_timestamp): use rb_time_num_new to
	  represent struct bintime preciously.

Wed Jul  1 08:46:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_encoding): encodings need extra depth.
	  [ruby-core:24100]

Wed Jul  1 06:47:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (enum_grep): gets rid of type-punning calls.

Tue Jun 30 18:19:07 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (rb_hash_hash): documentation fix.  a patch from
	  Marc-Andre Lafortune.  [ruby-core:23943]

	* object.c (rb_mod_cmp): ditto.

	* range.c (range_eq): ditto.

	* string.c (rb_str_partition, rb_str_rpartition): ditto.

	* struct.c (rb_struct_s_def): ditto.

Tue Jun 30 17:44:24 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (reg_match_pos): adjust offset based on characters, not
	  bytes.  [ruby-dev:38722]

	* string.c (rb_str_offset): new function.

	* string.c (rb_str_index_m): no call to rb_reg_adjust_startpos().

Tue Jun 30 16:57:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb: renamed to get rid of collision against
	  instruction.rb on command line completion of shell.

	* tool/mkconfig.rb (RbConfig.expand): get rid of exceptions on
	  frozen strings unless really changed.

	* tool/file2lastrev.rb: get rid of global variables.

	* tool/compile_prelude.rb: use US-ASCII name.

Tue Jun 30 16:46:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insns.def, tool/instruction.rb: fixed types.

Tue Jun 30 11:08:49 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/oniguruma.h, include/ruby/re.h, re.c, regcomp.c,
	  regenc.c, regerror.c, regexec.c, regint.h, regparse.c: use long.

Tue Jun 30 11:05:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (dln_find_1): fixed index overrun.

Tue Jun 30 08:42:34 2009  Eric Hodel  <drbrain@segment7.net>

	* tool/instruby.rb: summary is required in a .gemspec.

Tue Jun 30 01:35:12 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
